--- a/react/src/index.css
+++ b/react/src/index.css
@@ -4,9 +4,15 @@
     top: 0;
     left: 0;
     bottom: 0;
-    margin-top: 55px;
+    margin-top: 56px;
 }
 
 main {
     margin-left: 290px;
+    padding-top: 56px;
+}
+
+.my-navbar {
+    position: fixed!important;
+    width: 100%;
 }
